# cxx_repo_template

./: .clang-format  .gitattributes  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
